прикрутил DTO и прочее...