@@ -1,20 +1,16 @@
 package ru.gb.springdatajpa.controller;
 
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
+import ru.gb.springdatajpa.converter.ProductConverter;
 import ru.gb.springdatajpa.dto.ProductDto;
 import ru.gb.springdatajpa.model.Product;
 import ru.gb.springdatajpa.service.ProductService;
 
+import javax.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/")
+@RequestMapping("/products")
 public class ProductRestController {
 
     private final ProductService productService;
@@ -24,26 +20,27 @@ public class ProductRestController {
     }
 
     // http://localhost:8080/app/products GET
-    @GetMapping("/products")
+    @GetMapping("/")
     public List<ProductDto> getAllStudents() {
-        return productService.findAll().stream().map(ProductDto::new).collect(Collectors.toList());
+        return productService.findAll().stream().map(ProductConverter::productToProductDto).toList();
     }
 
     // http://localhost:8080/app/products/3 GET
-    @GetMapping("/products/{id}")
+    @GetMapping("/info/{id}")
     public ProductDto getStudentInfo(@PathVariable Long id) {
-        return new ProductDto(productService.findById(id));
+        return ProductConverter.productToProductDto(productService.findById(id));
     }
 
-    // http://localhost:8080/app/products POST
-    @PostMapping("/products")
-    public Product saveProduct(@RequestBody Product product) {
+    // http://localhost:8080/app/products/add POST
+    @PostMapping("/add")
+    public ProductDto saveProduct(@Valid @RequestBody ProductDto productDto) {
+        Product product = ProductConverter.productDtoToProduct(productDto);
         productService.save(product);
-        return product;
+        return ProductConverter.productToProductDto(product);
     }
 
     // http://localhost:8080/app/products/delete/1 GET
-    @GetMapping("products/delete/{id}")
+    @GetMapping("/delete/{id}")
     public void deleteProductById(@PathVariable Long id) {
         productService.deleteById(id);
     }
